# SecuredFiles

./: README.md  hatch_plugin.py  metadata.json  pyproject.toml
SecuredFiles/: __init__.py  __main__.py
src/SecuredFiles/: __init__.py  __main__.py
