[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SecuredFiles"
authors = [
  { name="LassaInora", email="lassainora@lassainore.fr" },
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=41.0.3",
    "PyQt5"
]

[project.urls]
"Homepage" = "https://github.com/LassaInora/SecuritedFiles"
"Bug Tracker" = "https://github.com/LassaInora/SecuritedFiles/issues"